// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteImage renders ipfs sources 1`] = `
<View
  source={
    {
      "uri": "ipfs://QmeE94srcYV9WwJb1p42eM4zncdLUai2N9zmMxxukoEQ23",
    }
  }
/>
`;

exports[`RemoteImage renders static sources 1`] = `
<View
  source={
    {
      "uri": "https://s3.amazonaws.com/airswap-token-images/OXT.png",
    }
  }
/>
`;

exports[`RemoteImage renders svg correctly 1`] = `
<View
  source={
    {
      "uri": "https://raw.githubusercontent.com/MetaMask/contract-metadata/master/images/dai.svg",
    }
  }
/>
`;

exports[`RemoteImage renders with Solana network badge when on Solana network 1`] = `
<View
  useNativeDriver={true}
>
  <View>
    <View
      fadeIn={true}
      isTokenImage={true}
      source={
        {
          "uri": "https://example.com/token.png",
        }
      }
      style={
        {
          "borderRadius": 8,
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#eee",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
